--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ nav ul li:hover a {
     top: 0;
     left: 0;
     width: 100%;
-    height: 3px;
+    height: 3.5px;
     background-color: #fff;
     z-index: 21;
     transition: all .3s ease-in-out;
@@ -201,12 +201,11 @@ nav ul li:hover a {
 }
 
 .mBtn span:nth-child(3) {
-    top: unset;
-    bottom: 0;
+    top: 18px;
 }
 
 .mBtn.on a span:nth-child(1) {
-    transform: translateY(10px) rotate(-45deg);
+    transform: translateY(10px) rotate(45deg);
 }
 
 .mBtn.on a span:nth-child(2) {
@@ -214,7 +213,7 @@ nav ul li:hover a {
 }
 
 .mBtn.on a span:nth-child(3) {
-    transform: translateY(-8px) rotate(45deg);
+    transform: translateY(-8px) rotate(-45deg);
 }
 
 .m_menu {
