--- a/web_portfolio/coffeenie/css/index.css
+++ b/web_portfolio/coffeenie/css/index.css
@@ -20,10 +20,6 @@ body {
 	margin: 50px 0;
 }
 
-#md {
-
-}
-
 /* 컨테이너 */
 .container {
 	width: 1000px;
@@ -164,7 +160,7 @@ body {
 	font-weight: 200;
 }
 
-.nav ul ul>li>a::after {
+.nav ul ul>li>a:after {
 	content: "";
 	position: absolute;
 	left: 0;
@@ -175,7 +171,7 @@ body {
 	transition: all .3s ease;
 }
 
-.nav ul ul>li:hover>a::after {
+.nav ul ul>li:hover>a:after {
 	width: 100%;
 }
 
