--- a/css/style.css
+++ b/css/style.css
@@ -783,18 +783,63 @@ nav ul li:hover a {
 #contact {
     height: 100%;
     padding-top: 70px;
-    padding-bottom: 90px;
+    padding-bottom: 150px;
 }
 
-.mail_icon {
+.mail_link {
+    position: relative;
+    width: 100%;
+    height: 350px;
+}
+
+.mail_link .mail_icon {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 50px;
     height: 50px;
     background: url(../img/email.png) no-repeat center;
     background-size: cover;
-    margin: 0 auto 20px auto;
+    margin: 0 auto;
 }
 
-.address_box {
+.mail_link .mail_text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-bottom: 50px;
+    text-align: center;
+    font-size: 60px;
+    font-weight: 600;
+    color: #03658C;
+    transition : color .5s;
+}
+
+.mail_link .mail_text:hover {
+    color: #05A0A3;
+}
+
+.mail_link .mail_thanks {
+    position: absolute;
+    top: 80%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    white-space: nowrap;
+}
+
+.mail_link .mail_thanks p {
+    text-align: center;
+    font-size: 17px;
+    color: #03658C;
+}
+
+.mail_link .mail_thanks p:first-child {
+    margin-bottom: 10px;
+}
+
+/* .address_box {
     width: 400px;
     margin: 0 auto;
 }
@@ -823,7 +868,7 @@ nav ul li:hover a {
     background-color: #03658C;
     color: #fff;
     cursor: pointer;
-}
+} */
 
 address {
     text-align: center;
@@ -929,6 +974,11 @@ address {
 
     .design_box a {width: 49%; height: 49%; margin-top: 2%; margin-right: 2%;}
     .design_box a:nth-child(2n) {margin-right: 0;}
+
+    .mail_link {height: 250px;}
+    .mail_link .mail_text {font-size: 40px;}
+    .mail_link .mail_thanks p {font-size: 15px;}
+    .mail_link .mail_thanks p:first-child {margin-bottom: 5px;}
 }
 
 @media (max-width: 600px) {
@@ -961,7 +1011,9 @@ address {
     .slider .swiper-slide .slide_text .slide_btn .site {width: 120px;}
     .slider .swiper-slide .slide_text .slide_btn .work {width: 120px;}
     
-    .address_box {width: 100%;}
+    .mail_link .mail_text {font-size: 28px;}
+    .mail_link .mail_thanks p {font-size: 14px;}
+    /* .address_box {width: 100%;} */
 
     .top_btn {right: 16px;}
     .top_btn a {width: 50px; height: 50px;}
