--- a/css/style.css
+++ b/css/style.css
@@ -387,6 +387,7 @@ nav ul li:hover a {
 /* 자기 소개 */
 #intro .intro_box {
     display: flex;
+    display: -ms-flex;
     height: 500px;
 }
 
@@ -941,13 +942,13 @@ address {
     #main {margin-top: 70px; background: url(../img/tablet.png) no-repeat center; background-size: contain;}
     #main .emoji {animation: motion2 0.6s linear 0s infinite alternate;}
 
-    #intro .intro_box {flex-direction: column; height: auto;}
+    #intro .intro_box {flex-direction: column; -ms-flex-direction: column; height: auto;}
     #intro .intro_box .me {width: 100%; height: 300px;}
     #intro .intro_box .me .me_img {transform: translate(-50%, -50%);}
     #intro .intro_box .me .back1 {top: -15px; left: 300px;}
     #intro .intro_box .me .back2 {bottom: -2px; right: 300px;}
     #intro .intro_box .me .hashtag {top: auto; bottom: -75px;}
-    #intro .intro_box .intro_text {width: auto; margin: 0 auto; box-sizing: border-box;}
+    #intro .intro_box .intro_text {min-width: 376px; margin: 0 auto; box-sizing: border-box;}
     #intro .intro_box .intro_text p.resolution {text-align: center;}
 
     .skill_box {width: 100%;}
