--- a/css/style.css
+++ b/css/style.css
@@ -406,7 +406,6 @@ nav ul li:hover a {
     border: 10px solid #D9471A;
     background: url(../img/me.jpg) no-repeat top center;
     background-size: cover;
-    -ms-interpolation-mode: bicubic;
     animation: itsme 5s ease-in-out 1s infinite;
     z-index: 5;
 }
@@ -942,13 +941,13 @@ address {
     #main {margin-top: 70px; background: url(../img/tablet.png) no-repeat center; background-size: contain;}
     #main .emoji {animation: motion2 0.6s linear 0s infinite alternate;}
 
-    #intro .intro_box {flex-direction: column; -ms-flex-direction: column; height: auto;}
+    #intro .intro_box {flex-direction: column; -ms-flex-direction: column; height: auto; align-items: center; -ms-flex-align: center;}
     #intro .intro_box .me {width: 100%; height: 300px;}
     #intro .intro_box .me .me_img {transform: translate(-50%, -50%);}
     #intro .intro_box .me .back1 {top: -15px; left: 300px;}
     #intro .intro_box .me .back2 {bottom: -2px; right: 300px;}
     #intro .intro_box .me .hashtag {top: auto; bottom: -75px;}
-    #intro .intro_box .intro_text {min-width: 376px; margin: 0 auto; box-sizing: border-box;}
+    #intro .intro_box .intro_text {width: auto; margin: 0 auto; box-sizing: border-box; white-space: nowrap;}
     #intro .intro_box .intro_text p.resolution {text-align: center;}
 
     .skill_box {width: 100%;}
