--- a/web_portfolio/espoir/css/style.css
+++ b/web_portfolio/espoir/css/style.css
@@ -148,7 +148,7 @@ body {
 	outline: none;
 }
 
-#header .header_nav li.lang .btn::after {
+#header .header_nav li.lang .btn:after {
 	content: "";
 	position: absolute;
 	width: 15px;
@@ -158,7 +158,7 @@ body {
 	background: url(../img/keyboard_arrow_down.png) no-repeat center;
 }
 
-#header .header_nav li.lang .btn.on::after {
+#header .header_nav li.lang .btn.on:after {
 	background: url(../img/keyboard_arrow_up.png) no-repeat center;
 }
 
