--- a/web_portfolio/espoir/css/style.css
+++ b/web_portfolio/espoir/css/style.css
@@ -1655,7 +1655,7 @@ html {
 	.list2 .img-box {height: auto;}
 	.list2 .review_img {display: block; width: 100%; height: 400px; margin-top: 40px; background: url(../img/brush_review.jpeg) no-repeat center; background-size: cover;}
 
-	.popup {background-color: rgba(255,255,255);}
+	.popup {background-color: #fff;}
 	.popup .pop_review {width: 100%; height: 100%; padding-left: 0; padding-right: 0;}
 	.popup .pop_review h1 {margin-left: 60px; padding-bottom: 30px;}
 	.popup .pop_review .pop_reviewer {padding-bottom: 40px;}
