--- a/web_portfolio/sub1/css/style.css
+++ b/web_portfolio/sub1/css/style.css
@@ -159,19 +159,14 @@ header .btn a:hover svg path {
     display: block;
 }
 
-.explain dl .template img {
-    width: 100%;
-}
-
 /* 푸터 */
 footer {
     width: 100%;
-    height: 200px;
     background: #03658C;
 }
 
-footer address {
-    line-height: 200px;
+footer .copyright {
+    padding: 80px 0;
     text-align: center;
     color: #fff;
 }
@@ -236,8 +231,7 @@ footer address {
     .explain dl dt {font-size: 18px;}
     .explain dl dd {font-size: 16px;}
 
-    footer {height: 100px;}
-    footer address {font-size: 14px; line-height: 100px;}
+    footer .copyright {font-size: 14px; padding: 30px 0;;}
 
     .top_btn {right: 16px;}
     .top_btn a {width: 50px; height: 50px;}
@@ -256,7 +250,7 @@ footer address {
     .explain dl dt {font-size: 16px;}
     .explain dl dd {font-size: 14px;}
 
-    footer address {font-size: 12px;}
+    footer .copyright {font-size: 12px;}
 
     .top_btn {right: 8px;}
 }
