--- a/web_portfolio/sub3/css/style.css
+++ b/web_portfolio/sub3/css/style.css
@@ -14,11 +14,14 @@ header {
     background: #03658C;
 }
 
-header > .container {
+header .container {
     display: flex;
+    display: -ms-flex;
     height: 100%;
     justify-content: space-between;
+    -ms-flex-pack: justify;
     align-items: center;
+    -ms-flex-align: center;
 }
 
 header .tit {
@@ -94,6 +97,10 @@ header .btn a:hover svg path {
 }
 
 /* 설명 */
+.explain {
+    height: 100%;
+}
+
 .explain dl {
     padding: 0 90px;
     color: #03658C;
@@ -170,11 +177,12 @@ header .btn a:hover svg path {
 /* 푸터 */
 footer {
     width: 100%;
+    height: 150px;
     background: #03658C;
+    border: 1px solid red;
 }
 
 footer .copyright {
-    padding: 80px 0;
     text-align: center;
     color: #fff;
 }
@@ -182,7 +190,6 @@ footer .copyright {
 /* 탑 버튼 */
 .top_btn {
     position: fixed;
-    top: auto;
     right: 50px;
     bottom: 50px;
 }
@@ -227,7 +234,7 @@ footer .copyright {
 }
 
 @media (max-width: 600px) {
-    header > .container {flex-direction: column; justify-content: center;}
+    header .container {flex-direction: column; -ms-flex-direction: column; justify-content: center; -ms-flex-pack: center;}
 
     header .tit {text-align: center; padding-left: 0;}
 
@@ -239,7 +246,7 @@ footer .copyright {
     .explain dl dt {font-size: 18px;}
     .explain dl dd {font-size: 16px;}
 
-    footer .copyright {font-size: 14px; padding: 30px 0;}
+    footer .copyright {font-size: 14px;}
 
     .top_btn {right: 16px;}
     .top_btn a {width: 50px;  height: 50px;}
