--- a/web_portfolio/sub3/css/style.css
+++ b/web_portfolio/sub3/css/style.css
@@ -177,12 +177,11 @@ header .btn a:hover svg path {
 /* 푸터 */
 footer {
     width: 100%;
-    height: 150px;
     background: #03658C;
-    border: 1px solid red;
 }
 
 footer .copyright {
+    padding: 50px 0;
     text-align: center;
     color: #fff;
 }
