--- a/web_portfolio/sub4/css/style.css
+++ b/web_portfolio/sub4/css/style.css
@@ -166,12 +166,11 @@ header .btn a:hover svg path {
 /* 푸터 */
 footer {
     width: 100%;
-    height: 200px;
     background: #03658C;
 }
 
 footer address {
-    line-height: 200px;
+    padding: 50px 0;
     text-align: center;
     color: #fff;
 }
@@ -236,8 +235,7 @@ footer address {
     .explain dl dt {font-size: 18px;}
     .explain dl dd {font-size: 16px;}
 
-    footer {height: 100px;}
-    footer address {font-size: 14px; line-height: 100px;}
+    footer address {font-size: 14px;}
 
     .top_btn {right: 16px;}
     .top_btn a {width: 50px; height: 50px;}
