--- a/web_portfolio/sub1/css/style.css
+++ b/web_portfolio/sub1/css/style.css
@@ -231,7 +231,7 @@ footer .copyright {
     .explain dl dt {font-size: 18px;}
     .explain dl dd {font-size: 16px;}
 
-    footer .copyright {font-size: 14px; padding: 30px 0;;}
+    footer .copyright {font-size: 14px;}
 
     .top_btn {right: 16px;}
     .top_btn a {width: 50px; height: 50px;}
