--- a/css/style.css
+++ b/css/style.css
@@ -411,11 +411,12 @@ nav ul li:hover a {
     border: 10px solid #D9471A;
     background: url(../img/me.jpg) no-repeat top center;
     background-size: cover;
-    animation: itsme 5s ease-in-out 1s infinite;
+    /* animation: itsme 5s ease-in-out 1s infinite; */
+    border-radius: 140% 180% 170% 140% / 140% 150% 180% 170%;
     z-index: 5;
 }
 
-@keyframes itsme {
+/* @keyframes itsme {
     0% {
         border-radius: 140% 180% 170% 140% / 140% 150% 180% 170%;
     }
@@ -425,7 +426,7 @@ nav ul li:hover a {
     100% {
         border-radius: 140% 180% 170% 140% / 140% 150% 180% 170%;
     }
-}
+} */
 
 #intro .intro_box .me .back1 {
     position: absolute;
@@ -434,10 +435,11 @@ nav ul li:hover a {
     width: 180px;
     height: 200px;
     background: linear-gradient(to bottom right, #05A0A3, #03658C);
-    animation: back1 5s ease-in-out 1s infinite;
+    /* animation: back1 5s ease-in-out 1s infinite; */
+    border-radius: 140% 180% 170% 140% / 140% 150% 180% 170%;
 }
 
-@keyframes back1 {
+/* @keyframes back1 {
     0% {
         border-radius: 140% 180% 170% 140% / 140% 150% 180% 170%;
     }
@@ -447,7 +449,7 @@ nav ul li:hover a {
     100% {
         border-radius: 140% 180% 170% 140% / 140% 150% 180% 170%;
     }
-}
+} */
 
 #intro .intro_box .me .back2 {
     position: absolute;
@@ -457,10 +459,11 @@ nav ul li:hover a {
     height: 150px;
     transform: rotate(-30deg);
     background: linear-gradient(to bottom right, #BE3C13,#D9471A);
-    animation: back2 5s ease-in-out 1s infinite;
+    /* animation: back2 5s ease-in-out 1s infinite; */
+    border-radius: 140% 150% 200% 140% / 140% 150% 180% 170%;
 }
 
-@keyframes back2 {
+/* @keyframes back2 {
     0% {
         border-radius: 140% 150% 200% 140% / 140% 150% 180% 170%;
     }
@@ -470,7 +473,7 @@ nav ul li:hover a {
     100% {
         border-radius: 140% 150% 200% 140% / 140% 150% 180% 170%;
     }
-}
+} */
 
 #intro .intro_box .me .hashtag {
     position: absolute;
