--- a/css/style.css
+++ b/css/style.css
@@ -397,15 +397,20 @@ nav ul li:hover a {
 }
 
 #intro .intro_box .me {
-    position: relative;
     width: 50%;
 }
 
+#intro .intro_box .me .img_box {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
 #intro .intro_box .me .me_img {
-    position: absolute;
+    position: relative;
     top: 50%;
-    left: 55%;
-    transform: translate(-50%, -60%);
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 280px;
     height: 280px;
     border: 10px solid #D9471A;
@@ -429,8 +434,8 @@ nav ul li:hover a {
 
 #intro .intro_box .me .back1 {
     position: absolute;
-    top: 30px;
-    left: 95px;
+    bottom: 50%;
+    right: 50%;
     width: 180px;
     height: 200px;
     background: linear-gradient(to bottom right, #05A0A3, #03658C);
@@ -451,11 +456,11 @@ nav ul li:hover a {
 
 #intro .intro_box .me .back2 {
     position: absolute;
-    right: 100px;
-    bottom: 110px;
+    top: 50%;
+    left: 55%;
     width: 120px;
     height: 150px;
-    transform: rotate(-30deg);
+    transform: rotate(-40deg);
     background: linear-gradient(to bottom right, #BE3C13,#D9471A);
     animation: back2 5s ease-in-out 1s infinite;
 }
@@ -475,8 +480,8 @@ nav ul li:hover a {
 #intro .intro_box .me .hashtag {
     position: absolute;
     width: 257px;
-    top: 85%;
-    left: 55%;
+    bottom: 3%;
+    left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
     font-size: 18px;
@@ -916,8 +921,7 @@ address {
 @media (max-width: 1200px) {
     #intro .intro_box .me {width: 48%;}
     #intro .intro_box .me .me_img {left: 50%; width: 230px; height: 230px;}
-    #intro .intro_box .me .back1 {width: 160px; height: 180px; top: 50px; left: 60px;}
-    #intro .intro_box .me .back2 { right: 80px;}
+    #intro .intro_box .me .back1 {width: 160px; height: 180px;}
     #intro .intro_box .me .hashtag {left: 50%;}
     #intro .intro_box .intro_text {width: 52%; padding-top: 80px;}
     #intro .intro_box .intro_text p.resolution {font-size: 18px;}
@@ -949,8 +953,6 @@ address {
     #intro .intro_box {flex-direction: column; -ms-flex-direction: column; height: auto; align-items: center; -ms-flex-align: center;}
     #intro .intro_box .me {width: 100%; height: 300px;}
     #intro .intro_box .me .me_img {transform: translate(-50%, -50%);}
-    #intro .intro_box .me .back1 {top: -15px; left: 300px;}
-    #intro .intro_box .me .back2 {bottom: -2px; right: 300px;}
     #intro .intro_box .me .hashtag {top: auto; bottom: -75px;}
     #intro .intro_box .intro_text {width: auto; margin: 0 auto; box-sizing: border-box; white-space: nowrap;}
     #intro .intro_box .intro_text p.resolution {text-align: center;}
@@ -966,9 +968,6 @@ address {
 }
 
 @media (max-width: 840px) {
-    #intro .intro_box .me .back1 {left: 190px;}
-    #intro .intro_box .me .back2 {right: 230px; transform: rotate(-50deg);}
-
     .slider .swiper-slide .mockup_img {width: 580px; height: 280px;}
     .slider .swiper-slide .slide_text {height: 290px; align-items: center; flex-direction: column; justify-content: flex-start;}
     .slider .swiper-slide .slide_text:after {top: -120px; height: 120px;}
@@ -998,8 +997,8 @@ address {
     #main .emoji {width: 50px; height: 50px; animation: motion3 0.6s linear 0s infinite alternate;}
     #main .text_box .t_text, #main .text_box .line {font-size: 25px;}
 
-    #intro .intro_box .me .back1 {left: 80px;}
-    #intro .intro_box .me .back2 {right: 110px;}
+    /* #intro .intro_box .me .back1 {left: 80px;}
+    #intro .intro_box .me .back2 {right: 110px;} */
     #intro .intro_box .intro_text p b {width: 60px; font-size: 16px;}
     #intro .intro_box .intro_text p span {font-size: 16px;}
     #intro .intro_box .intro_text p span.space {margin-left: 60px;}
