--- a/css/style.css
+++ b/css/style.css
@@ -550,30 +550,16 @@ nav ul li:hover a {
     background-color: #D9471A;
 }
 
-.skill_box .box .circle .circle_img img {
-    width: 70px;
+.skill_box .box1 .circle .circle_img img {
+    width: 135px;
 }
 
 .skill_box .box2 .circle .circle_img img {
-    width: 55px;
-    margin-right: 10px;
-}
-
-.skill_box .box2 .circle .circle_img img:last-child {
-    margin-right: 0;
+    width: 115px;
 }
 
 .skill_box .box3 .circle .circle_img img {
-    width: 50px;
-}
-
-.skill_box .box3 .circle .circle_img .img1 {
-    margin-left: 25px;
-}
-
-.skill_box .box3 .circle .circle_img .img2,
-.skill_box .box3 .circle .circle_img .img3 {
-    margin-top: -5px;
+    width: 100px;
 }
 
 .skill_box .box .skill_text {
