--- a/web_portfolio/sub4/css/style.css
+++ b/web_portfolio/sub4/css/style.css
@@ -111,6 +111,14 @@ header .btn a:hover svg path {
     margin-bottom: 30px;
 }
 
+.explain dl .em {
+    display: inline-block;
+    padding: 5px 10px;
+    border-radius: 3px;
+    background: #03658C;
+    color: #fff;
+}
+
 .explain dl .intro {
     line-height: 1.6;
     word-break: keep-all;
