--- a/css/style.css
+++ b/css/style.css
@@ -479,7 +479,7 @@ nav ul li:hover a {
 
 #intro .intro_box .me .hashtag {
     position: absolute;
-    width: 257px;
+    width: 90%;
     bottom: 3%;
     left: 50%;
     transform: translate(-50%, -50%);
